--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "'A basic calculator exercise'",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "Megan Chantosa",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "marked": "^4.3.0",
     "nodemon": "^2.0.22"
   }
 }
